--- a/WebRestaurant/templates/registro.html
+++ b/WebRestaurant/templates/registro.html
@@ -4,23 +4,26 @@
   <head>
     <meta charset="utf-8">
     <title>Login Form Design One | Fazt</title>
-    <link rel="stylesheet" href='{% static "css/main.css"%}'>
+    <link rel="stylesheet" href='{% static "css/registro.css"%}'>
   </head>
   <body>
 
     <div class="login-box">
       <img src='{% static "img/icon.jpg"%}' class="avatar" alt="Avatar Image">
-      <h1>Entre aqui</h1>
+      <h1>Registro</h1>
       <form>
+
+        <!-- EMAIL INPUT -->
+        <label for="email">Email</label>
+        <input type="text"  placeholder="Ingrese Email">
         <!-- USERNAME INPUT -->
         <label for="username">Usuario</label>
         <input type="text" placeholder="Ingrese Usuario">
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Ingrese Contraseña">
-        <input type="submit" value="Iniciar Sesion">
-        <a href="{% url 'ERROR' %}">¿Olvidaste tu contraseña?</a><br>
-        <a href="{% url 'cliente:registro' %}">¿No tienes una cuenta?</a>
+        <input type="submit" value="Crear Cuenta">
+        <a href="{% url 'login' %}">¿Ya tienes una cuenta?</a>
       </form>
     </div>
   </body>
