--- a/WebRestaurant/templates/base.html
+++ b/WebRestaurant/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnomarket</title>
+    <title>RestaurantXXI</title>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,700;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,700;1,600&display=swap" rel="stylesheet">
     
     {% load static %}
@@ -20,7 +20,7 @@
     <header id="header">
         <img class="menu" src="{% static 'img/menuiconwhite.png' %}" alt="menu" id="menu">
         <div class="contenedor_logo">
-            <img  class="logo"  src="{% static 'img/tecnomarketpngicono.png' %}" alt="logo">
+            <img  class="logo"  src="{% static 'img/1996068.png' %}" alt="logo">
         </div>
 
         <div>
@@ -50,14 +50,14 @@
 
     <footer>
         <div class="marcas">
-            <img src="{% static 'img/footer/apple.png' %}" alt="apple">
+<!--            <img src="{% static 'img/footer/apple.png' %}" alt="apple">
             <img src="{% static 'img/footer/lenovo.png' %}" alt="lenovo">
             <img src="{% static 'img/footer/microsoft.png' %}" alt="microsoft">
             <img src="{% static 'img/footer/samsung.png' %}" alt="samsung">
-            <img src="{% static 'img/footer/xiaomi.png' %}" alt="xiaomi">
+            <img src="{% static 'img/footer/xiaomi.png' %}" alt="xiaomi"> --> 
         </div>
         <div class="logo_footer">
-            <img src="{% static 'img/tecnomarketpngicono.png' %}" alt="logo">
+            <img src="{% static 'img/1996068.png' %}" alt="logo">
         </div>
     </footer>
 
