--- a/WebRestaurant/templates/galeria.html
+++ b/WebRestaurant/templates/galeria.html
@@ -16,11 +16,12 @@
 <h2>Galería de nuestra tienda</h2>
 <br><br>
 <div class="galeria">
-     <a data-fancybox="gallery" href="{% static 'img/tienda/tienda1.jpg' %}"><img src="{% static 'img/tienda/tienda1.jpg' %}"></a>
-     <a data-fancybox="gallery" href="{% static 'img/tienda/tienda2.jpeg' %}"><img src="{% static 'img/tienda/tienda2.jpeg' %}"></a>
-     <a data-fancybox="gallery" href="{% static 'img/tienda/tienda3.jpg' %}"><img src="{% static 'img/tienda/tienda3.jpg' %}"></a>
-     <a data-fancybox="gallery" href="{% static 'img/tienda/tienda4.jpg' %}"><img src="{% static 'img/tienda/tienda4.jpg' %}"></a>
-     <a data-fancybox="gallery" href="{% static 'img/tienda/tienda5.jpg' %}"><img src="{% static 'img/tienda/tienda5.jpg' %}"></a>     
+     <a data-fancybox="gallery" href="{% static 'img/tienda/1.jpg' %}"><img src="{% static 'img/tienda/1.jpg' %}"></a>
+     <a data-fancybox="gallery" href="{% static 'img/tienda/2.jpg' %}"><img src="{% static 'img/tienda/2.jpg' %}"></a>
+     <a data-fancybox="gallery" href="{% static 'img/tienda/3.jpg' %}"><img src="{% static 'img/tienda/3.jpg' %}"></a>
+     <a data-fancybox="gallery" href="{% static 'img/tienda/4.jpg' %}"><img src="{% static 'img/tienda/4.jpg' %}"></a>
+     <a data-fancybox="gallery" href="{% static 'img/tienda/5.jpg' %}"><img src="{% static 'img/tienda/5.jpg' %}"></a>     
+     <a data-fancybox="gallery" href="{% static 'img/tienda/5.jpg' %}"><img src="{% static 'img/tienda/6.jpg' %}"></a>     
 </div>
 
 {% endblock %}
