--- a/WebRestaurant/templates/home.html
+++ b/WebRestaurant/templates/home.html
@@ -21,93 +21,39 @@
 {% endblock %} 
 
 {% block contenido %}
-<div class="slider">
-    <div>
-        <img src="{% static 'img/banner/banner1.png' %}" alt="">
+<div class="slider" >
+    <div >
+        <img id="nss" src="{% static 'img/banner/banner1.jpg' %}" alt="">
     </div>
     <div>
-        <img src="{% static 'img/banner/banner2.png' %}" alt="">
+        <img id="nss" src="{% static 'img/banner/banner2.jpg' %}" alt="">
     </div>
     <div>
-        <img src="{% static 'img/banner/banner3.png' %}" alt="">
+        <img id="nss" src="{% static 'img/banner/banner3.jpg' %}" alt="">
     </div>
 </div>
 
+{% load humanize %}
 <h2>Productos</h2>
 <div class="productos">
+    {% for p in platos %}
+    <div class="producto">
+        {% if p.imagen %}
+        <div class="contenedor_producto">
+        {% endif %}
+            <img src="{{ p.imagen.url}}" alt="imagen producto">
+            <div class="detalle">
+                <h1>{{ p.nombre | title}}</h1>
+                <br>
+                <h2>${{ p.precio | intcomma }}CLP</h2>
+                <br>
+                <h3>{{ p.descripcion}}</h3>
+            </div>
 
-<div class="producto">
-
-    <div class="contenedor_producto">
-
-        <img src="{% static 'img/lenovo_tablet.jpeg' %}" alt="imagen producto">
-        <div class="detalle">
-            <h5>Lenovo</h5>
-            <h2>Tablet</h2>
-            <h3>$120.000</h3>
         </div>
-
+       
     </div>
-
-</div>
-
-<div class="producto">
-
-    <div class="contenedor_producto">
-
-        <img src="{% static 'img/macbook.jpeg' %}" alt="imagen producto">
-        <div class="detalle">
-            <h5>apple</h5>
-            <h2>Macbook</h2>
-            <h3>$1.500.000</h3>
-        </div>
-
-    </div>
-
-</div>
-
-<div class="producto">
-
-    <div class="contenedor_producto">
-
-        <img src="{% static 'img/surface.jpeg' %}" alt="imagen producto">
-        <div class="detalle">
-            <h5>microsoft</h5>
-            <h2>Surface</h2>
-            <h3>$2.000.000</h3>
-        </div>
-
-    </div>
-
-</div>
-
-<div class="producto">
-
-    <div class="contenedor_producto">
-
-        <img src="{% static 'img/s9.jpeg' %}" alt="imagen producto">
-        <div class="detalle">
-            <h5>samsung</h5>
-            <h2>Galaxy s9</h2>
-            <h3>$400.000</h3>
-        </div>
-
-    </div>
-
-</div>
-
-<div class="producto">
-
-    <div class="contenedor_producto">
-
-        <img src="{% static 'img/redmi.jpeg' %}" alt="imagen producto">
-        <div class="detalle">
-            <h5>Xiaomi</h5>
-            <h2>Redmi note 8</h2>
-            <h3>$200.000</h3>
-        </div>
-
-    </div>
+    {% endfor %}
 
 </div>
 
