Act Formilario Contacto

--- a/WebRestaurant/templates/contacto.html
+++ b/WebRestaurant/templates/contacto.html
@@ -4,17 +4,44 @@
 
 
 {% block contenido %}
-<form action="" class="formulario_contacto"  method="post">
-    
-    {% csrf_token %}
-    {{ form }}
+{% load crispy_forms_tags%}
+<br>
+<br>
+<div class="row">
 
-    <br>
-    <button type="submit" id="btnEnviar" class="button">Enviar</button>
-    
+    <div class="col-12 col-md-6 offset-md-3">
 
-</form>
-{{mensaje}}
+        <div class="card">
+            <div class="card-body">
+                <h2>Contactanos!</h2>
+                <hr>
+                <form action=""  method="post">
+            
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                
+                    <br>
+                    <hr>
+                    <div class="d-flex justify-content-end">
+                        <input type="reset" value="Cancelar" class="btn btn-secondary">
+                        &nbsp;
+                        <button type="submit" id="btnEnviar" class="btn btn-primary	">Enviar</button>
+                
+                    </div>
+                  
+                    
+                
+                </form>
+                {{mensaje}}
+    
+            </div>
+        
+        </div>
+        
+    </div>
+</div>
+
+
 <table id="tablacontactos">
     
 </table>
