Act vista administrador y contacto

--- a/WebRestaurant/templates/administrador/base_administrador.html
+++ b/WebRestaurant/templates/administrador/base_administrador.html
@@ -63,7 +63,21 @@
    
     <script src="{% static 'js/menu.js' %"></script>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
+
+    {% if messages %}
+        {% for m in messages %}
+            <script>
+                Swal.fire({
+                    "title":"Felicitaciones",
+                    "text":"{{m}}",
+                    "icon":"success"
+                })
+            </script>
+        {% endfor %}
+    {% endif %}
+
     {% block js %}
 
     {% endblock %}
