--- a/WebRestaurant/templates/base.html
+++ b/WebRestaurant/templates/base.html
@@ -43,6 +43,7 @@
     </header>
 
     <div id="contenido">
+    
 
         {% block contenido %}
         {% endblock %}
@@ -66,7 +67,20 @@
    
     <script src="{% static 'js/menu.js' %"></script>
 
-    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    {% if messages %}
+        {% for m in messages %}
+            <script>
+                Swal.fire({
+                    "title":"Felicitaciones",
+                    "text":"{{m}}",
+                    "icon":"success"
+                })
+            </script>
+        {% endfor %}
+    {% endif %}
+
     {% block js %}
 
     {% endblock %}
