--- a/WebRestaurant/templates/registration/registro.html
+++ b/WebRestaurant/templates/registration/registro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Ingreso al sistema</title>
+    <title>Registro de usuario</title>
 </head>
 <body>
     {% load crispy_forms_tags %}
@@ -19,7 +19,7 @@
                 <div class="card">
                     <div class="card-body">
 
-                        <h2>Ingresa tus credenciales</h2>
+                        <h2>Registro de usuario</h2>
                         <hr>
                         <form action="" method="post">
 
@@ -27,9 +27,9 @@
                             {{ form | crispy}}
                             <br>
                             
-                            <input type="submit" value="Ingresar" class="btn btn-success float-left">
+                            <input type="submit" value="Registrar" class="btn btn-success float-left">
                             <a href="{% url 'home' %}" class="btn float-right">Ir al home</a> |
-                            <a href="{% url 'registro' %}">registrate</a>
+                            <a href="{% url 'login' %}" >iniciar sesión</a>
                         </form>
                     </div>
                 </div>
