Act vista administrador, lista de usuarios

--- a/WebRestaurant/templates/administrador/base_administrador.html
+++ b/WebRestaurant/templates/administrador/base_administrador.html
@@ -44,6 +44,9 @@
                         <a href="{% url 'login' %}">Iniciar sesión</a>
                     </li>
                     {% endif %}
+                    <li>
+                        <a href="{% url 'home' %}">Ir Home CLiente</a>
+                    </li>
                 </ul>
             </nav>
 
