--- a/WebRestaurant/templates/administrador/home_administrador.html
+++ b/WebRestaurant/templates/administrador/home_administrador.html
@@ -41,6 +41,10 @@
                 <a href="{% url 'listar_contactos' %}">
                     <button>Vista mensajes Contactos</button>
                  </a>
+                 <br>
+                 <a href="{% url 'listar_usuarios' %}">
+                    <button>Vista de usuarios</button>
+                 </a>
               
             </tr>
 
