act arreglos de errores

--- a/WebRestaurant/templates/administrador/usuarios/listarContactos.html
+++ b/WebRestaurant/templates/administrador/usuarios/listarContactos.html
@@ -35,7 +35,7 @@
             <tr>
                 <th>Nombre</th>
                 <th>Correo</th>
-                <th>Tipo consulta/th>
+                <th>Tipo consulta</th>
                 <th>Mensaje</th>
                 <th>Opciones</th>
                
